Update readme and config

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -4,7 +4,7 @@ storage-system: yaml
 mysql:
   host: "localhost"
   port: 3306
-  database: vitalspawn
-  username: "vitalspawn"
+  database: vitalback
+  username: "vitalback"
   password: ""
   prefix: "server_"
