Cancel if delay is active

--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -3,3 +3,4 @@ no-back: "&cNo location to teleport to!"
 no-perms: "&cYou don't have enough permissions!"
 player-only: "&cThis command can only be executed by players!"
 countdown: "&fTeleporting in &b%countdown% &fseconds"
+active-delay: "&cYou are already trying to teleport!"
