--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: VitalBack
 version: @version@
-main: com.tamrielnetwork.vitalback.VitalBack
+main: dev.meinel.leo.vitalback.VitalBack
 api-version: 1.17
 authors: [ Leopold Meinel ]
 description: Gives players the ability to teleport back to their last location.
